vue-project/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuetify-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: vuetify-app
