vue-project/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vuetify-app
spec:
  to:
    kind: Service
    name: vuetify-app
  port:
    targetPort: 8080
